# SAIREN-OS

./: .gitignore  ARCHITECTURE.md  BUILD_PLAN.md  CHANGELOG.md  Cargo.toml  FLEET_HUB_DESIGN.md  FLEET_HUB_PLAN.md  GPT-5.2_future README.md  ML_ENGINE_TEST_ANALYSIS.md  Opus-4.6_future README.md  README-prebuild.md  README.md  ROADMAP.md  SAIREN-OS V3.0- The Unified Architecture (Claude).md  SIMPLIFICATION.md  audit.md  build.rs  complexities.md  well_config.default.toml  well_config.toml  well_prognosis.toml
.claude/: settings.local.json
dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: client.ts  types.ts
dashboard/src/components/charts/: FlowBalanceChart.tsx  MSEChart.tsx  TimeSeriesChart.tsx
dashboard/src/components/common/: MetricCard.tsx  SeverityBadge.tsx
dashboard/src/components/feedback/: FeedbackView.tsx
dashboard/src/components/layout/: AlertBanner.tsx  Header.tsx
dashboard/src/components/live/: BaselineProgress.tsx  DrillingParams.tsx  FormationCard.tsx  HealthGauge.tsx  LiveView.tsx  LookAheadPanel.tsx  SpecialistVotes.tsx  WellControl.tsx
dashboard/src/components/reports/: CriticalReports.tsx  DailyView.tsx  HourlyView.tsx  ReportCard.tsx
dashboard/src/hooks/: useLiveData.ts  usePolling.ts
dashboard/src/theme/: colors.ts  index.css
data/strategic_history.db/: db
deploy/: fleet-hub.service  install.sh  install_hub.sh  sairen-os.service
deploy/wireguard/: hub_wg0.conf.template  rig_wg0.conf.template
docs/: AFTER_ACTION_REPORT.md  AUDIT_REPORT.md  CAMPAIGN_SYSTEM.md  FAULT_DETECTION_TO_VERIFICATION_WORKFLOW.md  ML_ENGINE.md  ML_ENGINE_INTEGRATION_PLAN.md  ML_ENGINE_OPTIMAL_CONDITIONS_PLAN.md  SAIREN-OS - Complete System Reference.md  SIMULATION_PHASES.md  STRATEGIC_LLM_EXTRACTION.md  SYSTEM_AUDIT.md  TACTICAL_LLM_EXTRACTION.md  api.md  dynamic-thresholds-implementation.md  dynamic-thresholds.md  improvement-roadmap.md  operations.md  realistic-sim.md
migrations/: 001_initial_schema.sql  002_fleet_performance.sql  003_intelligence.sql  004_knowledge_graph.sql  005_enrollment_tokens.sql  006_drop_api_keys.sql
scripts/: clean_f5.py  fleet-hub-setup.sh  fleet-rig-setup.sh  volve_wits_server.py  witsml_to_csv.py
src/: aci.rs  history_storage.rs  lib.rs  main.rs  sensors.rs  types.rs  volve.rs
src/acquisition/: mod.rs  scanner.rs  sensors.rs  stdin_source.rs  wits_parser.rs
src/agents/: mod.rs  orchestrator.rs  strategic.rs  tactical.rs
src/agents/specialists/: formation.rs  hydraulic.rs  mod.rs  mse.rs  stuck_pipe.rs  well_control.rs
src/api/: envelope.rs  handlers.rs  mesh_routes.rs  middleware.rs  mod.rs  routes.rs  setup.rs  v2_handlers.rs  v2_routes.rs
src/api/handlers/: config.rs  drilling.rs  metrics.rs  ml.rs  mod.rs  reports.rs  status.rs
src/background/: mod.rs  self_healer.rs
src/baseline/: mod.rs
src/causal/: mod.rs
src/cfc/: cell.rs  checkpoint.rs  depth_ahead.rs  formation_detector.rs  mod.rs  network.rs  normalizer.rs  regime_clusterer.rs  training.rs  wiring.rs
src/config/: auto_detect.rs  defaults.rs  formation.rs  mod.rs  validation.rs  watcher.rs  well_config.rs
src/context/: knowledge_store.rs  mod.rs  ram_recall.rs  vector_db.rs
src/debrief/: comparison.rs  mod.rs  narrative.rs  timeline.rs
src/director/: llm_director.rs  mod.rs
src/fleet/: client.rs  federation.rs  mod.rs  queue.rs  sync.rs  types.rs  uploader.rs
src/gossip/: client.rs  mod.rs  protocol.rs  server.rs  state.rs  store.rs
src/hub/: config.rs  db.rs  federation.rs  mod.rs
src/hub/api/: dashboard.rs  events.rs  federation.rs  graph.rs  health.rs  intelligence.rs  library.rs  metrics.rs  mod.rs  pairing.rs  performance.rs  registry.rs
src/hub/auth/: api_key.rs  mod.rs
src/hub/curator/: dedup.rs  mod.rs  pruning.rs  scoring.rs
src/hub/intelligence/: job_queue.rs  mod.rs
src/hub/intelligence/workers/: mod.rs
src/hub/knowledge_graph/: builder.rs  mod.rs  query.rs
src/knowledge_base/: assembler.rs  compressor.rs  fleet_bridge.rs  layout.rs  mid_well.rs  migration.rs  mod.rs  post_well.rs  watcher.rs
src/llm/: mistral_rs.rs  mod.rs  scheduler.rs  strategic_llm.rs  tactical_llm.rs
src/ml_engine/: analyzer.rs  correlations.rs  dysfunction_filter.rs  formation_segmenter.rs  mod.rs  optimal_finder.rs  param_change_tracker.rs  quality_filter.rs  scheduler.rs  storage.rs
src/optimization/: bit_wear.rs  confidence.rs  look_ahead.rs  mod.rs  optimizer.rs  rate_limiter.rs  templates.rs
src/physics_engine/: connection_gas.rs  drilling_models.rs  metrics.rs  mod.rs  models.rs  swab_surge.rs
src/pipeline/: coordinator.rs  mod.rs  processing_loop.rs  processor.rs  source.rs  state.rs
src/processing/: fft.rs  health_scoring.rs  mod.rs
src/storage/: acks.rs  damping_recipes.rs  feedback.rs  history.rs  lockfile.rs  mod.rs  persistence.rs  strategic.rs  suggestions.rs
src/strategic/: actor.rs  advisory.rs  aggregation.rs  mod.rs  parsing.rs  templates.rs
src/types/: advisory.rs  debrief.rs  formation.rs  knowledge_base.rs  ml.rs  mod.rs  optimization.rs  state.rs  tactical.rs  thresholds.rs  ticket.rs  wits.rs
static/: fleet_dashboard.html  index.html  reports.html  setup.html
tests/: api_regression.rs  auto_detect_tests.rs  config_validation_tests.rs  csv_replay_integration.rs  fleet_integration.rs  gossip_integration.rs  knowledge_base_integration.rs  pipeline_regression.rs  volve_regression.rs
