[package]
name = "sairen-os"
version = "0.1.0"
edition = "2021"
authors = ["SAIREN-OS Team"]
description = "Strategic AI Rig ENgine - Drilling Operational Intelligence System"
license = "Proprietary"
readme = "README.md"
repository = ""
keywords = ["drilling", "wits", "mse", "operational-intelligence", "industrial"]
categories = ["science", "embedded"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["rt"] }
socket2 = "0.5"

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "fs", "limit"] }
hyper = { version = "1.1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# ML Engine statistics
statrs = "0.16"

# Time handling
chrono = { version = "0.4.41", features = ["serde"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
futures = "0.3"
async-trait = "0.1"
regex = "1.10"

# Database
sled = "0.34"
rusqlite = { version = "0.31", features = ["bundled"] }

# System (disk space checks)
libc = "0.2"

# Hashing (for digital signatures)
md5 = "0.7"

# Random number generation (for simulation)
rand = "0.8"
rand_distr = "0.4"

# Parallel computation (CfC dual network)
rayon = "1.10"

# Lock-free atomic config swaps (hot reload)
arc-swap = "1.7"

# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env"] }

# XML parsing (for WITSML adapter)
quick-xml = "0.31"

# Zip archive reading (for Volve dataset)
zip = "0.6"

# Dashboard embedding
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# HTTP client (gossip peer exchange)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Compression (gossip envelope wire format)
zstd = "0.13"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "simulation"
path = "src/bin/simulation.rs"

[[bin]]
name = "volve-replay"
path = "src/bin/volve_replay.rs"

[[bin]]
name = "witsml-to-csv"
path = "src/bin/witsml_to_csv.rs"

[lib]
name = "sairen_os"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
